--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,54 +4,18 @@ version = "3.0.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-[features]
-readline = ["dep:crossterm", "dep:rustyline-async"]
-async-std = ["dep:async-std"]
-
 [dependencies]
 simple_logger = { git = "https://github.com/fvacek/rust-simple_logger.git", branch = "main", features = ["stderr"] }
+shvproto = { git = "https://github.com/silicon-heaven/libshvproto-rs.git", branch = "master" }
+shvrpc = { git = "https://github.com/silicon-heaven/libshvrpc-rs.git", branch = "master" }
+#shvrpc = { path = "../libshvrpc-rs" }
 
 futures = "0.3.29"
-async-std = { version = "1.12.0", features = ["attributes"], optional = true }
+async-std = { version = "1.12.0", features = ["attributes"] }
 log = "0.4.20"
-bytes = "1.5.0"
-sha1 = "0.10.6"
-chrono = "0.4.31"
-hex = "0.4.3"
-rand = "0.8.5"
-url = "2.4.1"
-glob = "0.3.1"
-duration-str = "0.7.1"
-serde = "1.0.193"
-serde_yaml = "0.9.29"
 clap = { version = "4.4.12", features = ["derive"] }
-async-trait = "0.1.77"
-crc = "3.0.1"
-rustyline-async = { version = "0.4.1", optional = true }
-crossterm = { version = "0.27.0", optional = true }
-#getrandom = { version = "0.2", features = ["js"] }
+rustyline-async = { version = "0.4.1" }
+crossterm = { version = "0.27.0" }
+url = "2.4.1"
 
 
-[[bin]]
-name = "cp2cp"
-[[bin]]
-name = "shvcall"
-required-features = ["async-std"]
-[[bin]]
-name = "shvbroker"
-required-features = ["async-std"]
-
-[[example]]
-name = "device"
-path = "examples/device.rs"
-required-features = ["async-std"]
-
-[[test]]
-name = "test_shvcall"
-path = "tests/test_shvcall.rs"
-required-features = ["async-std"]
-
-[[test]]
-name = "test_broker"
-path = "tests/test_broker.rs"
-required-features = ["async-std"]
