--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "shvcall"
-version = "3.1.0"
+version = "3.2.0"
 edition = "2021"
 
 [features]
@@ -16,8 +16,9 @@ async-std = { version = "1.12.0", features = ["attributes"] }
 log = "0.4.20"
 clap = { version = "4.4.12", features = ["derive"] }
 rustyline-async = { version = "0.4.1", optional = true }
-crossterm = { version = "0.27.0", optional = true }
+crossterm = { version = "0.28", optional = true }
 url = "2.4.1"
+futures-time = "3.0.0"
 
 # For local development
 #[patch."https://github.com/silicon-heaven/libshvproto-rs"]
