--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ readline = ["dep:crossterm", "dep:rustyline-async"]
 shvproto = { git = "https://github.com/silicon-heaven/libshvproto-rs.git", branch = "master" }
 shvrpc = { git = "https://github.com/silicon-heaven/libshvrpc-rs.git", branch = "master" }
 futures = "0.3.29"
-async-std = { version = "1.12.0", features = ["attributes"] }
+smol = "2"
 log = "0.4.20"
 simple_logger = { version = "5.0.0", features = ["stderr"] }
 clap = { version = "4.4.12", features = ["derive"] }
