--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,14 @@
 [package]
 name = "shvcall"
-version = "3.6.1"
-edition = "2021"
+version = "3.7.0"
+edition = "2024"
 
 [[bin]]
 name = "shvcall"
 
 [features]
 readline = ["dep:crossterm", "dep:rustyline-async"]
+serial = ["dep:serialport"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [dependencies]
@@ -19,10 +20,11 @@ log = "0.4.20"
 simple_logger = { version = "5.0.0", features = ["stderr"] }
 clap = { version = "4.4.12", features = ["derive"] }
 rustyline-async = { version = "0.4.1", optional = true }
-crossterm = { version = "0.28", optional = true }
+crossterm = { version = "0.29", optional = true }
 url = "2.4.1"
 futures-time = "3.0.0"
 async-channel = "2.3.1"
+serialport = { version = "4.7.1", optional = true }
 
 # For local development
 #[patch."https://github.com/silicon-heaven/libshvproto-rs"]
