--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -30,6 +30,9 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
 
+    - name: Install system dependencies
+      run: sudo apt-get install -y libudev-dev pkg-config
+      
     - name: Set up Rust
       uses: actions-rust-lang/setup-rust-toolchain@v1
       with:
@@ -93,6 +96,9 @@ jobs:
     name: Code coverage
     runs-on: ubuntu-latest
     steps:
+      - name: Install system dependencies
+        run: sudo apt-get install -y libudev-dev pkg-config
+      
       - name: Generate coverage
         uses: syyyr/rust-pycobertura-action@v1.2.0
         with:
