CI: Check version bump

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -103,3 +103,10 @@ jobs:
         uses: syyyr/rust-pycobertura-action@v2.0.0
         with:
           project_name: shvcall
+
+  check-version-bump:
+    name: Check version bump
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check version bump
+        uses: syyyr/rust-check-version-bump@ed0644b33a4994450066d35f02905be30e80e627
