--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -114,4 +114,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Check version bump
-        uses: syyyr/rust-check-version-bump@ed0644b33a4994450066d35f02905be30e80e627
+        uses: syyyr/rust-check-version-bump@v1.0.0
