CI: Publish crate

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -97,3 +97,16 @@ jobs:
     steps:
       - name: Check version bump
         uses: silicon-heaven/rust-check-version-bump@v1.0.0
+
+  upload-crates-io:
+    name: Publish crates on crates.io
+    if: github.ref == 'refs/heads/master'
+    needs: [build]
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v6
+
+      - run: |
+          cargo login <<< "${{secrets.CRATES_IO_TOKEN}}"
+          cargo publish
