--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -14,16 +14,24 @@ on:
 
 env:
   CARGO_TERM_COLOR: always
+  RUSTFLAGS: "-Dwarnings"
+
+permissions:
+  # For syyyr/rust-pycobertura-action
+  pull-requests: write
 
 jobs:
   build:
     strategy:
+      fail-fast: false
       matrix:
-        os: [ubuntu-latest]
+        os: [ubuntu-latest, windows-latest]
         toolchain: [stable, nightly]
         include:
           - os: ubuntu-latest
             target: x86_64-unknown-linux-gnu
+          - os: windows-latest
+            target: x86_64-pc-windows-msvc
     runs-on: ${{ matrix.os }}
 
     steps:
@@ -31,19 +39,30 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Install system dependencies
-      run: sudo apt-get install -y libudev-dev pkg-config
+      if: matrix.os == 'ubuntu-latest'
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y libudev-dev pkg-config
 
     - name: Set up Rust
       uses: actions-rust-lang/setup-rust-toolchain@v1
       with:
         target: ${{ matrix.target }}
         toolchain: ${{ matrix.toolchain }}
+        components: clippy
         override: true
+
+    - name: Clippy
+      run: cargo clippy --all-targets --all-features
+    - name: Build
+      run: cargo build --all-targets --all-features
+    - name: Run tests
+      run: cargo test --all-targets --all-features
 
     - name: Build and Install Binary
       run: |
         mkdir -p ${{github.workspace}}/install
-        cargo install --path '${{github.workspace}}' --root '${{github.workspace}}/install' --target ${{ matrix.target }} --locked
+        cargo install --all-features --path '${{github.workspace}}' --root '${{github.workspace}}/install' --target ${{ matrix.target }} --locked
       shell: bash
 
     - name: Upload Artifact
@@ -84,7 +103,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Install system dependencies
-        run: sudo apt-get install -y libudev-dev pkg-config
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y libudev-dev pkg-config
 
       - name: Generate coverage
         uses: silicon-heaven/rust-pycobertura-action@v2.0.0
