--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,8 @@
 [package]
 name = "shvcall"
+description = "CLI utility to invoke remote SHV RPC calls"
+license = "MIT"
+repository = "https://github.com/silicon-heaven/shvcall-rs"
 version = "3.9.3"
 edition = "2024"
 
